--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,21 @@ body {
   overflow-y: auto;
 }
 
+html,
+body {
+  height: 100%;
+}
+
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  flex-grow: 1;
+}
+
 .container {
   width: 120rem;
   position: absolute;
@@ -1014,7 +1029,6 @@ p {
   width: 100vw;
   background-color: #353A45;
   padding: 4.8rem 0;
-  position: absolute;
 }
 
 .footer__link {
