--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -19,6 +19,18 @@ body
   overflow-x: hidden
   overflow-y: auto
 
+html,
+body
+  height: 100%
+
+.wrapper
+  min-height: 100%
+  display: flex
+  flex-direction: column
+
+.main
+  flex-grow: 1
+
 .container
   width: 120rem
   position: absolute
